--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Patrick Kocu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/testWeb/zenlessZoneZero/css/index.css">
-    <link rel="icon" href="/testWeb/zenlessZoneZero/assets/logo/zenless-etymologiae-high-resolution-logo-transparent (2).png">
+    <link rel="icon" href="/testWeb/zenlessZoneZero/assets/logo/zenless-etymologiae-ZE-2000x1518.png">
     <script src="/testWeb/zenlessZoneZero/js/index.js"></script>
     <title>Zenless Zone Zero — Overview & Guide</title>
 </head>
