add main logo, nav bar, section 1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,33 @@
 </head>
 <body>
     <header>
-        
+        <img src="/testWeb/zenlessZoneZero/assets/logo/zenless-etymologiae-dark-mode-2000x377.png" alt="zenless-etymologiae-dark-mode-2000x377" width="200" height="37.7">
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Overview</a></li>
+                <li><a href="#">Story</a></li>
+                <li><a href="#">Characters</a></li>
+                <li><a href="#">Gameplay</a></li>
+                <li><a href="#">Factions</a></li>
+                <li><a href="#">Recource</a></li>
+            </ul>
+        </nav>
     </header>
+    <hr>
+    <main>
+        <section class="introduction">
+            <h1>Zenless Zone Zero</h1>
+            <img src="/testWeb/zenlessZoneZero/assets/images/Splashscreen_Welcome_To_New_Eridu.webp" alt="Splashscreen_Welcome_To_New_Eridu" title="Splashscreen_Welcome_To_New_Eridu" width="500" height="281.5">
+            <p><em>An urban fantasy action <abbr title="Role-Playing Game">RPG</abbr> where you navigate the chotic streets of New Eridu an face the dangers within the hollows.</em></p>
+            <p><a href="https://en.wikipedia.org/wiki/Action_role-playing_game" target="_blank">Action RPG</a> | <a href="https://www.hoyoverse.com/en-us/" target="_blank">HoYoverse</a> | 2024</p>
+        </section>
+        <section class="story">
+            <h2>World Overview</h2>
+            <figure>
+                
+            </figure>
+        </section>
+    </main>
 </body>
 </html>
