add todo comment

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <p><em>An urban fantasy action <abbr title="Role-Playing Game">RPG</abbr> where you navigate the chotic streets of New Eridu an face the dangers within the hollows.</em></p>
             <p><a href="https://en.wikipedia.org/wiki/Action_role-playing_game" target="_blank">Action RPG</a> | <a href="https://www.hoyoverse.com/en-us/" target="_blank">HoYoverse</a> | 2024</p>
         </section>
+        <!--TODO => finish section 2 and 3-->
         <section class="story">
             <h2>World Overview</h2>
             <figure>
